# rag-crm

./: .env.example  .env.uat.example  .gitignore  CHANGELOG.md  CHANGELOG_CLEAR.md  CLAUDE.md  RAGBOT_MASTER.md  RAGBOT_PROJECT_SHOWCASE.md  RAGBOT_SKILL.txt  RAGBOT_STEP_PIPELINE.md  RAG_RESEARCH_MASTER_20260618.md  RAG_RESEARCH_MASTER_PART2_20260618.md  README.md  README_DATABASE.md  README_DEV.md  README_DEVOPS.md  STATE_SNAPSHOT.md  STATE_SNAPSHOT_HISTORY.md  alembic.ini  conftest.py  deploy.sh  docker-compose.uat.yml  docker-compose.yml  pyproject.toml  setup.sh  start.sh  z-rag-application.txt  z_luannt_deubg.txt  z_luannt_question.txt
.aidlc/: workspace.yaml
.aidlc/skills/: architect.md  auditor.md  implementer.md  reviewer.md
.claude/: settings.json
.claude/commands/: doc-format-control.md  rag-debug.md  rag-flow-debug.md  rag-loadtest.md  rag-painpoints.md
.claude/workflows/: deep-debug-to-expert.js
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: audit-agent-diff.yml  config-completeness.yml  cross-tenant-rls.yml  eval-gate.yml  eval-ragas.yml  per-bot-golden.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
alembic/: env.py  squashed_baseline.sql
alembic/_archive_pre_squash_20260618/: 20260415_0002_monitoring_capability_policy.py  20260415_0004_external_message_id.py  20260415_0009_ai_config_runtime.py  (+139 more)
claude-ops/: README.md
deploy/: ragbot-chat-worker.service  ragbot-monthly-reset.service  ragbot-monthly-reset.timer  ragbot-token-reconcile.service  ragbot-token-reconcile.timer
docker/: Dockerfile.api
docs/: API_REFERENCE_V2.md  BOT_OWNER_TOOLKIT.md  BOT_SYSTEM_PROMPT_TEMPLATE.md  BUOC_TIEP_THEO_KHI_UPLOAD.md  COMPARISON_VS_TECHNICAL_SUPPORT.md  EXPERT_RAG_BLUEPRINT.md  FLOW_INGEST_DETAIL.md  FLOW_QUERY_DETAIL.md  INDEX.md  JWT_KEY_ROTATION.md  LUONG_UPLOAD_DAY_DU.md  MULTI_CHANNEL_INTEGRATION.md  ONBOARDING_GUIDE.md  OPS_POOL_SIZING.md  OUTPUT_PDF_1111111_TT09.md  PDF_1111111_TT09_MARKDOWN.md  PDF_1111111_TT09_RAW.md  PDF_TT09_KREUZBERG_MD.md  PERFORMANCE_TUNING.md  PROJECT_FLOWS.md  PROJECT_FLOW_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICKSTART.md  RAG_SCORING_TEMPLATE.md  README-ROLE.md  SECURITY.md  SECURITY_POLICIES.md  TESTING.md  TROUBLESHOOTING.md  UPLOAD_FLOW_SUPPORT_REVIEW.md  V2_MIGRATION_BUG_LESSONS.md  V9_PHASE4_LOAD_TEST_RUNBOOK.md  naming-convention-flow.md
golden_set/: CHUNKING_AUDIT_20260420.md  EVAL_REPORT_20260420.md  PERFORMANCE_AUDIT_20260420.md  README.md  golden_questions_v2.json  kich_ban_questions_v1.json  results_20260422_205455.json  sample_evaluation.json  test_rooms_20260420_175811.json
program/: 00-charter.md  00-inventory.md  EXPERT-PLAN.md  EXPERT-STATE-REPORT.md  RESUME.md
reports/: ADAPTIVE_RAGANYTHING_DEEPDIVE_20260627.md  ALLFLOWS_DEEP_AUDIT_20260709.md  ALLFLOWS_DEEP_AUDIT_SYNTHESIS_20260709.md  ALL_FLOWS_RELIABILITY_AUDIT_20260710.md  ANALYTICAL_QUERY_FLOW_DESIGN_20260701.md  APPENDIX_FULL_LEDGERS_20260714.md  AUDIT_500Q_PART1_ANSWERS.md  AUDIT_500Q_PART2_ANSWERS.md  BCD_DEBUG_FIXPLAN_20260621.md  BEST_PRACTICE_AUDIT_20260713.md  CASE_STUDY_INGEST_TPM_COST_20260616.md  CHANGELOG_VERIFY_20260714.md  CHUAN_AUDIT_VS_TLDW_20260625.md  CHUNKING_3WAY_ANALYSIS_20260615.md  CHUNKING_RESEARCH_VS_CODE_20260618.md  CHUNK_SCORING_MASTER_20260620.md  CODE_DEEPDIVE_REVIEW_20260711.md  COMPLETE_INVENTORY_20260626.md  CONFIG_BURDEN_AUDIT_20260627.md  CONFIG_COMPLETENESS_GATE_20260708.md  CONFIG_FLAG_HISTORY_AUDIT_20260714.md  CONFIG_FLOW_DEEPDIVE_20260708.md  CONSOLIDATED_ASSESSMENT_PLAN_20260621.md  CORE_RAG_MECHANICS_20260713.md  COVERAGE_SWEEP_20260626.md  CRITIQUE_VERIFICATION_20260713.md  CURRENT_TRUTH_20260709.md  CURSOR_DOC_DEEP_ANALYSIS_20260708.md  DEEPDIVE_60Q_chinh-sach-xe_20260703.md  DEEPDIVE_CHUNKING_20260617.md  DEEPDIVE_COMPLIANCE_20260617.md  DEEPDIVE_RETRIEVAL_20260617.md  DEEPDIVE_ROOTCAUSE_FLOW_20260630.md  DEEP_ANALYSIS_ALL_FLOWS_20260708.md  DEEP_ANALYSIS_MULTIBOT_20260626.md  DEEP_IMPROVEMENT_ANALYSIS_20260621.md  DEEP_MULTIBOT_ARCH_20260626.md  DOMAIN_NEUTRAL_BETRAYAL_AUDIT_20260625.md  EKIMETRICS_FLOW_DIVE_20260615.md  EVAL_AGENT_JUDGE_20260627.md  (+167 more)
scripts/: LOADTEST_BATCH_MODE.md  README_DEBUG_FLOW.md  _debug_chunking.py  _loadtest_common.py  _matrix_run_one.sh  _precision_debug.py  ab_cascade_20260619.py  ab_flags_20260619.py  agent_d_loadtest.py  alembic_dedup_renumber.py  alembic_linearize_chain.py  alembic_renumber_if_needed.sh  analyze_75q_results.py  analyze_score_distribution.py  analyze_smartness_300q.py  analyze_step_latency.py  anti_hardcode_check.sh  audit_agent_diff.sh  audit_async_mindset.sh  audit_bot_sysprompt_rules.py  audit_config_key_drift.py  audit_domain_neutral.sh  audit_harness_run.py  audit_logger_replay.py  audit_per_tenant_cost.py  audit_prompt_cache_utilization.py  audit_resolver_fallback.sh  auditor_analyze_round.py  backfill_chunk_context.py  backfill_metadata_entities.py  backup_db.sh  bakeoff_chunking_strategies.py  build_bot_summary.py  build_deepeval_report.py  build_qa_format_report.py  build_sysprompts_20260609.py  capture_score_model.py  chat_async_worker.py  check_config_completeness.py  check_happy_case.py  (+159 more)
static/: admin.html  crm.html  reupload.html  test-bot-detail.html  test-bots.html
tests/: _xfail_list.txt  conftest.py
(+2212 files in other folders)
